--- a/web/css/style.css
+++ b/web/css/style.css
@@ -11,6 +11,7 @@
     --black: #000000d3;
     --white-menu: #ffffff3b;
     --red: #c405059f;
+    --red-notransparent: #c40505;
     --white: #fff;
 }
 
@@ -173,21 +174,51 @@ body {
     & #elenco {
         min-height: 100vh;
         background: var(--black);
-        padding: 5em 10em;
+        padding: 0;
         display: flex;
         flex-direction: column;
         gap: 50px;
 
 
         & .cards-elenco {
+            position: relative;
+            overflow: hidden;
+            padding: 0 1em;
+
+            & .slider-btn {
+              position: absolute;
+              top: 50%;
+              transform: translateY(-50%);
+              background-color: var(--red-notransparent);
+              color: var(--white);
+              border: none;
+              padding: 1.5em;
+              cursor: pointer;
+              z-index: 10;
+              border-radius: 50px;
+              font-weight: bold;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+            }
+            
+            & .slider-btn.prev {
+              left: 2em;
+            }
+            
+            & .slider-btn.next {
+              right: 2em;
+            }
+
             & ul {
                 display: flex;
                 align-items: center;
-                justify-content: flex-start;
+                justify-content: start;
                 gap: 50px;
-                overflow-x: auto;
-                overflow-y: hidden;
                 padding: 1em 0;
+                transition: .7s;
+                user-select: none;
+                cursor: grab;
 
                 & li {
                     list-style: none;
@@ -204,6 +235,10 @@ body {
                         padding: 1em;
                         transition: .2s;
 
+                        & .nome {
+                            min-height: 40px;
+                        }
+
                         &:hover {
                             background-color: var(--red);
                             transform:  scale(1.03);
@@ -216,6 +251,8 @@ body {
                             height: 360px;
                             object-fit: cover;
                             border-radius: 10px;
+                            pointer-events: none;
+                            -webkit-user-drag: none;
                         }
                     }
                 }
@@ -240,6 +277,7 @@ body {
     }
 
     .title-section {
+        padding: 5em 10em;
         color: var(--white);
         & h2 {
             font-size: 40px;
