--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,296 +1,12 @@
+/* Google fonts import */
 @import url('https://fonts.googleapis.com/css2?family=Amarante&family=Dancing+Script:wght@400..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: "Raleway", sans-serif;
-}
+/*Demais arquivos css */
+@import "geral.css";
+@import "variaveis.css";
+@import "header.css";
+@import "lanterna.css";
+@import "home.css";
+@import "elenco.css";
+@import "temporadas.css";
 
-:root {
-    --black: #000000d3;
-    --white-menu: #ffffff3b;
-    --red: #c405059f;
-    --red-notransparent: #c40505;
-    --white: #fff;
-    --old-paper: #fdf6e3;
-}
-
-body {
-    overflow-x: hidden;
-    cursor: url('/img/cursor/cursor.png'), auto;
-    background-color: var(--white);
-    scroll-behavior: smooth;
-
-    header,
-    .nav-menu {
-        position: fixed;
-        width: 25%;
-        background-color: transparent;
-        left: 50%;
-        transform: translateX(-50%);
-        top: 1em;
-        border-radius: 50px;
-        padding: 1.5em;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        backdrop-filter: blur(16px);
-        border: 1px solid var(--white);
-        z-index: 2;
-        transition: .5s;
-
-        & .menu {
-            border: none;
-            outline: none;
-            background-color: var(--red);
-            color: var(--white);
-            padding: 1em;
-            border-radius: 20px;
-            cursor: pointer;
-            font-weight: bold;
-        }
-
-        & .logo {
-            max-width: 120px;
-            object-fit: contain;
-            border-radius: 8px;
-        }
-    }
-
-    & .scrolled {
-        display: none;
-    }
-
-    & .scrolled-nav {
-        width: 65%;
-        top: 2em !important;
-        padding: .5em;
-        background-color: var(--white-menu) !important;
-        transform:scale(1) translateX(-50%) !important;
-        
-        & ul {
-            flex-direction: row !important;
-            justify-content: flex-start;
-            width: 100%;
-        }
-    }
-
-    & .nav-menu {
-        position: fixed;
-        background-color: var(--white-menu);
-        top: 8em;
-        transform: scale(0);
-        transition: .6s;
-        border: none;
-
-        & ul {
-            display: flex;
-            flex-direction: column;
-            gap: 12px;
-
-            & a {
-                text-decoration: none;
-                color: var(--white);
-                text-transform: capitalize;
-                font-weight: 600;
-                font-size: 22px;
-
-
-                &:hover {
-                    color: var(--red);
-                    scale: 1.1;
-                    transition: .2s;
-                }
-
-                & li {
-                    list-style: none;
-                    padding: 10px;
-                    border-radius: 20px;
-
-                    &:hover {
-                        background-color: var(--black);
-                        transition: .5s;
-                    }
-                }
-            }
-        }
-    }
-
-    & .efeito-lanterna {
-        position: absolute;
-        right: 3em;
-        top: 3em;
-        padding: 1em 2em;
-        border-radius: 50px;
-        border: none;
-        outline: none;
-        cursor: pointer;
-        background-color: var(--white);
-        transition: .5s;
-        z-index: 2;
-        border: 2px solid var(--red);
-
-        &:hover {
-            transform: scale(1.1);
-            transition: .5s;
-        }
-    }
-
-    & .nav-menu.open {
-        transform: scale(1) translateX(-50%);
-    }
-
-    & .background-video {
-        height: 100vh;
-        width: 100vw;
-        background-image: url(/img/banners/wallpaper-estatico.jpg);
-        background-position: center;
-        background-size: cover;
-        background-attachment: fixed;
-
-        & img {
-            width: 100%;
-            height: 100vh;
-            object-fit: cover;
-        }
-
-        & .flashlight {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100vw;
-            height: 100vh;
-            pointer-events: none;
-            background: radial-gradient(circle 100% at var(--x, 50%) var(--y, 50%), transparent 0%, rgb(0, 0, 0) 100%);
-            transition: --radius 0.7s, background 0.05s;
-            z-index: 1;
-        }
-
-        & .active {
-            background: radial-gradient(circle 300px at var(--x, 50%) var(--y, 50%), transparent 0%, rgb(0, 0, 0) 100%);
-        }
-    }
-
-    & #elenco {
-        min-height: 85vh;
-        background: var(--black);
-        padding: 0;
-        display: flex;
-        flex-direction: column;
-        gap: 50px;
-
-
-        & .cards-elenco {
-            position: relative;
-            overflow: hidden;
-            padding: 0 1em;
-            max-width: 2000px;
-            margin: 0 auto;
-
-            & .slider-btn {
-              position: absolute;
-              top: 50%;
-              transform: translateY(-50%);
-              background-color: var(--red-notransparent);
-              color: var(--white);
-              border: none;
-              padding: 1.5em;
-              cursor: pointer;
-              z-index: 10;
-              border-radius: 50px;
-              font-weight: bold;
-              display: flex;
-              align-items: center;
-              justify-content: center;
-            }
-            
-            & .slider-btn.prev {
-              left: 2em;
-            }
-            
-            & .slider-btn.next {
-              right: 2em;
-            }
-
-            & ul {
-                display: flex;
-                align-items: center;
-                justify-content: start;
-                gap: 50px;
-                padding: 1em 0;
-                transition: .7s;
-                user-select: none;
-                cursor: grab;
-
-                & li {
-                    list-style: none;
-
-                    & .card {
-                        width: 300px;
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-                        flex-direction: column;
-                        gap: 20px;
-                        background-color: var(--old-paper);
-                        border-radius: 0;
-                        padding: 1em;
-                        transition: .2s;
-
-                        & .nome {
-                            min-height: 70px;
-                            font-family: "Dancing Script", cursive;
-                            font-size: 28px;
-                            text-align: center;
-                        }
-
-                        &:hover {
-                            background-color: var(--red);
-                            transform:  scale(1.03);
-                            box-shadow: 0 20px 40px rgba(0,0,0,0.3);
-                            transition: .5s;
-                        }
-
-                        & img {
-                            width: 270px;
-                            height: 360px;
-                            object-fit: cover;
-                            border-radius: 10px;
-                            pointer-events: none;
-                            -webkit-user-drag: none;
-                        }
-                    }
-                }
-            }
-        }
-    }
-
-    .animation-to-left {
-        transform: translateX(-100vw);
-        transition: .8s;
-        transition-delay: .3s;
-    }
-
-    .animation-to-right {
-        transform: translateX(100vw);
-        transition: .8s;
-        transition-delay: .3s;
-    }
-
-    .content-section {
-        transition: .8s;
-    }
-
-    .title-section {
-        padding: 5em 10em;
-        color: var(--white);
-        & h2 {
-            font-size: 40px;
-        }
-
-        & p {
-            font-size: 16px;
-        }
-    }
-}
