--- a/web/css/temporadas.css
+++ b/web/css/temporadas.css
@@ -21,6 +21,7 @@
                 display: flex;
                 flex-direction: column;
                 gap: 20px;
+                position: relative;
 
                 & summary {
                     padding: 1em;
@@ -53,6 +54,53 @@
                         overflow: auto;
                         max-height: 255px;
                     }
+                }
+
+                & .button-trailer {
+                    position: absolute;
+                    top: 1em;
+                    right: 3em;
+                    z-index: 1;
+
+                    & button {
+                        padding: 1em;
+                        cursor: pointer;
+                        text-transform: uppercase;
+                        border: none;
+                        outline: none;
+                        font-weight: 600;
+                        transition: .5s;
+
+                        &:hover {
+                            background-color: var(--red);
+                            color: var(--white);
+                            transition: .5s;
+                        }
+                    }
+                }
+
+                & .trailer-iframe {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    position: absolute;
+                    inset: 0;
+                    top: 6.4em;
+                    background-color: var(--black);
+                    opacity: 0;
+                    pointer-events: none;
+                    transition: 1s;
+                    
+                    & iframe {
+                        min-height: 100%;
+                        min-width: 100%;
+                    }
+                }
+
+                & .trailer-on {
+                    opacity: 1;
+                    transition: 1s;
+                    pointer-events: all;
                 }
             }
         }
