--- a/web/css/trilha-sonora.css
+++ b/web/css/trilha-sonora.css
@@ -16,3 +16,11 @@
         }
     }
 }
+
+@media(max-width: 1024px) {
+
+    .playslist-apple-music {
+
+        padding: 0 1em !important;
+    }
+}
