--- a/web/css/header.css
+++ b/web/css/header.css
@@ -100,3 +100,11 @@
     & .nav-menu.open {
         transform: scale(1) translateX(-50%);
     }
+
+
+    @media(max-width: 1024px) {
+
+        .nav-menu {
+            display: none;
+        }
+    }
